# summer-slow-jam-2023

./: .gitignore  CMakeLists.txt  main.c
src/: aabb.c  aabb.h  ball.c  ball.h  dino.c  dino.h  main.c  main.h  paddle.c  paddle.h  text.c  text.h  vector-extension.c  vector-extension.h
